@@ -25,8 +25,8 @@
         #Event Range
         ####################################
         Event_First = '0';
-        Event_Total = '-1';
-        #Event_Total = '10000';
+        #Event_Total = '-1';
+        Event_Total = '1000';
         #Requested Granularity
         ####################################
         #Uniformity_Granularity = '128'; #Granularity of 128 means 128 slices per phi sector (matches number of strips);
